# nl2024-pract

01-ruby/: main.rb  readme.md
02-rust/: readme.md
02-rust/src/: main.rs
03-swift/: main.swift  readme.md
03-swift/example/: input.txt  output.txt
04-lua/: main.lua  readme.md
04-lua/example/: input.json  output.csv
05-lisp/: main.lisp  readme.md
06-haskell/: client-server.cabal  readme.md
06-haskell/src/: Client.hs  Server.hs
07-OCaml/: main.ml
07-ocaml/: readme.md
08-scala/: Solution.scala  readme.md
09-f-sharp/: 09-f-sharp.fsproj  Program.fs  readme.md
10-elixir/: main.exs  readme.md
10-elixir/example/: input.json  inputHard.json  output.yaml
