cabal-version:       3.0
name:                client-server
version:             0.1.0.0
build-type:          Simple

executable server
  main-is:             Server.hs
  build-depends:       base >=4.14 && <5,
                       network >=3.1.2.7,
                       bytestring >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable client
  main-is:             Client.hs
  build-depends:       base >=4.14 && <5,
                       network >=3.1.2.7,
                       bytestring >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010